--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <link rel="shortcut icon" href="favicon.ico" /><!-- include icon for browser -->
   <script type='text/javascript' src='js/jquery-1.11.3.min.js'></script><!-- jQuery -->
   <script type='text/javascript' src='js/street.js'></script><!-- your script -->
-  
+	<meta property="og:image:height" content="150">
+  <meta property="og:image" content="img/m_sq.jpg" />
+  <meta property="og:image" content="img/m_hr.jpg" />
   <!-- IE must understand HTML5: -->
   <!--[if IE]>
    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
