--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Генератор названий поселков."> 
   <meta name="Keywords" content="днд, таверна, dnd, d&d"> 
   <link rel="stylesheet" type="text/css" href="css/street.css"><!-- include css styles  -->
-  <link href="http://youknowwho.ru/source/fonts/FortAwesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://youknowwho.ru/source/fonts/FortAwesome/css/font-awesome.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" /><!-- include icon for browser -->
   <script type='text/javascript' src='js/jquery-1.11.3.min.js'></script><!-- jQuery -->
   <script type='text/javascript' src='js/street.js'></script><!-- your script -->
