--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Генератор названий поселков."> 
   <meta name="Keywords" content="днд, таверна, dnd, d&d"> 
   <link rel="stylesheet" type="text/css" href="css/street.css"><!-- include css styles  -->
-  <link href="https://youknowwho.ru/source/fonts/FortAwesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="../_fonts/FortAwesome/css/font-awesome.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" /><!-- include icon for browser -->
   <script type='text/javascript' src='js/jquery-1.11.3.min.js'></script><!-- jQuery -->
   <script type='text/javascript' src='js/street.js'></script><!-- your script -->
@@ -32,19 +32,19 @@
 	</div>
 	<div id='result'>
 	</div>
-	<!-- Yandex.Metrika counter -->
+
+	 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (d, w, c) {
         (w[c] = w[c] || []).push(function() {
             try {
-                w.yaCounter32640745 = new Ya.Metrika({
-                    id:32640745,
+                w.yaCounter42911239 = new Ya.Metrika({
+                    id:42911239,
                     clickmap:true,
                     trackLinks:true,
                     accurateTrackBounce:true,
                     webvisor:true,
-                    trackHash:true,
-                    ut:"noindex"
+                    trackHash:true
                 });
             } catch(e) { }
         });
@@ -61,7 +61,7 @@
         } else { f(); }
     })(document, window, "yandex_metrika_callbacks");
 </script>
-<noscript><div style='display: none;'><img src="https://mc.yandex.ru/watch/32640745?ut=noindex" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<noscript><div><img src="https://mc.yandex.ru/watch/42911239" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 </body>
 </html>
