--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <link rel="shortcut icon" href="favicon.ico" /><!-- include icon for browser -->
   <script type='text/javascript' src='js/jquery-1.11.3.min.js'></script><!-- jQuery -->
   <script type='text/javascript' src='js/street.js'></script><!-- your script -->
-	<meta property="og:image:height" content="150">
-  <meta property="og:image" content="img/m_sq.jpg" />
-  <meta property="og:image" content="img/m_hr.jpg" />
+  
+  <meta property="og:image" content="img/og.jpg" />
+  <meta property="og:title" content="Генератор названий поселений" />
+  <meta property="og:description" content="Выбравшись из очередного данжа, партия подходит к небольшой деревеньке под названием..." />
   <!-- IE must understand HTML5: -->
   <!--[if IE]>
    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
