fix[all]: updat

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> <!-- for monile -->
   <meta name="description" content="Выбравшись из очередного данжа, партия подходит к небольшой деревеньке под названием..."> 
   <meta name="Keywords" content="днд, dnd, d&d"> 
-  <link rel="stylesheet" type="text/css" href="css/style.css"><!-- include css styles  -->
+  <link rel="stylesheet" type="text/css" href="css/style.css?v=0.1"><!-- include css styles  -->
   <link href="../_fonts/FortAwesome/css/font-awesome.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" /><!-- include icon for browser -->
   <script type='text/javascript' src='js/jquery-1.11.3.min.js'></script><!-- jQuery -->
-  <script type='text/javascript' src='data/settlements.js'></script><!-- your script -->
-  <script type='text/javascript' src='js/street.js'></script><!-- your script -->
+  <script type='text/javascript' src='data/settlements.js?v=0.1'></script><!-- your script -->
+  <script type='text/javascript' src='js/street.js?v=0.1'></script><!-- your script -->
   
   <meta property="og:image" content="img/f1.jpg" />
   <meta property="og:image" content="img/m_hr.jpg" />
