feat[info]: added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
 	</div>
 	<div id='result'>
 	</div>
+	<div id='info'>
+		<h1>Генератор названий городов</h1>
+		<p>
+			С помощью этого генератора можно получить названия городов и прочих населенных пунктов в разных стилях.
+		</p>
+		<p>
+			Код на гитхабе: <a href='https://github.com/Etignis/Topography'>https://github.com/Etignis/Topography</a>
+		</p>
+		
+	<div>
 
 	 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
